fix(): fix overflow x

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
   flex-direction: row;
   font-size: 30px;
   text-align: center;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .flex-container > div {
